WebKit should claim that it can show responses for a broader range of JSON MIMETypes https://bugs.webkit.org/show_bug.cgi?id=176252 <rdar://problem/34212885>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-09-07
Reviewed by Ryosuke Niwa.

Source/WebCore:

* platform/MIMETypeRegistry.h:
* platform/MIMETypeRegistry.cpp:
(WebCore::MIMETypeRegistry::canShowMIMEType):
Extend this to support JavaScript and JSON MIMETypes that WebKit
knows how to treat as text.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/WKNavigationResponse.mm: Added.
(-[WKNavigationResponseTestNavigationDelegate webView:decidePolicyForNavigationResponse:decisionHandler:]):
(-[WKNavigationResponseTestNavigationDelegate webView:didCommitNavigation:]):
(-[WKNavigationResponseTestSchemeHandler webView:startURLSchemeTask:]):
(-[WKNavigationResponseTestSchemeHandler webView:stopURLSchemeTask:]):
(TEST):
Test for canShowMIMEType with multiple JSON mime types and a garbage mime type.
Previously canShowMIMEType would have been YES for "application/json" but
NO for "application/vnd.api+json". Now it shows YES for both.

* TestWebKitAPI/PlatformGTK.cmake:
* TestWebKitAPI/PlatformWPE.cmake:
* TestWebKitAPI/PlatformWin.cmake:
* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebCore/MIMETypeRegistry.cpp: Added.
(TestWebKitAPI::TEST):
Tests for MIMETypeRegistry's dynamic JSON mime type detection.

Canonical link: https://commits.webkit.org/193131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221778 268f45cc-cd09-0410-ab3c-d52691b4dbfc